# isynth

./: CMakeLists.txt  README.md  build.sh
dependencies/: .gitignore
dependencies/juce/amalgamation/: juce_amalgamated_template.cpp
dependencies/juce/extras/Introjucer/Builds/VisualStudio2005/: The Introjucer.vcproj
dependencies/juce/extras/Introjucer/Builds/VisualStudio2008/: The Introjucer.vcproj
dependencies/juce/extras/Introjucer/Builds/VisualStudio2010/: The Introjucer.vcxproj
dependencies/juce/extras/Introjucer/Source/ComponentEditor/: jucer_JucerDocument.cpp
dependencies/juce/extras/Introjucer/Source/Project/: jucer_AudioPluginModule.h
dependencies/juce/extras/Introjucer/Source/Utility/: jucer_MiscUtilities.cpp
dependencies/juce/extras/audio plugin demo/: JuceDemoPlugin.jucer
dependencies/juce/extras/audio plugin demo/Builds/VisualStudio2005/: JuceDemoPlugin.vcproj
dependencies/juce/extras/audio plugin demo/Builds/VisualStudio2008/: JuceDemoPlugin.vcproj
dependencies/juce/extras/audio plugin demo/Builds/VisualStudio2010/: JuceDemoPlugin.vcxproj  JuceDemoPlugin.vcxproj.filters
dependencies/juce/extras/audio plugin demo/Source/: PluginProcessor.cpp
dependencies/juce/extras/binarybuilder/Builds/VisualStudio2008/: BinaryBuilder.vcproj
dependencies/juce/extras/example projects/Builds/VisualStudio2005/: HelloWorld.vcproj
dependencies/juce/extras/example projects/Builds/VisualStudio2008/: HelloWorld.vcproj
dependencies/juce/extras/windows dll/Builds/VisualStudio2008/: juce_dll.vcproj
dependencies/juce/modules/juce_audio_devices/native/: juce_mac_CoreAudio.cpp
dependencies/juce/modules/juce_audio_processors/format_types/: juce_VST3PluginFormat.cpp
src/: .gitignore  CMakeLists.txt  stdafx.h
src/Assets-Raw/Songs/: Star Wars.mid
src/Assets/iSynth/Songs/: London Calling.mid  LondonCalling.jsmidi  Moonlight.mid  Mozart - Andante grazioso.jsmidi  Rondo Alla Turca Turkish March.jsmidi
src/Engine2D/: Application.cpp  Application.hpp  CMakeLists.txt  Coords.hpp  Engine2D.hpp  Exceptions.hpp  Input.cpp  Midi.cpp  Midi.hpp  SAL.hpp  Surface.cpp  Surface.hpp  WizardApplication.cpp  WizardApplication.hpp  WizardPage.cpp  main.cpp
src/Engine2D/SAL/: android.cpp  desktop.cpp  emscripten.cpp  flash.cpp  ios.cpp  sdl2.cpp
src/Framework/: Atomic.hpp  BinaryReader.hpp  BinaryWriter.hpp  CMakeLists.txt  Exceptions.hpp  FileUtils.hpp  Finally.hpp  Framework.hpp  NonCopyable.hpp  StringUtils.hpp
src/MidiParser/: CMakeLists.txt  MidiParser.cpp  MidiParser.hpp  stdafx.cpp
src/OggVorbis/: CMakeLists.txt  OggVorbis.hpp  OggVorbisFile.cpp  OggVorbisFile.hpp
src/OggVorbis/libvorbis/: os.h
src/OggVorbis/libvorbis/include/ogg/: os_types.h
src/OggVorbis/libvorbis/include/vorbis/: codec.h
src/iSynth/: CMakeLists.txt  OggVorbisCache.cpp  OggVorbisCache.hpp  OggVorbisSignal.hpp  Signal.hpp  iSynth.hpp  iSynthApp.cpp  iSynthApp.hpp  main.cpp
src/iSynth/Instruments/: Piano.cpp  Piano.hpp
src/tools/piano/: .gitignore  list.txt
src/tools/piano/PianoConv/: PianoConv.csproj  PianoConv.sln  Program.cs
src/tools/piano/PianoConv/Properties/: AssemblyInfo.cs
